--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link type="image/png" sizes="16x16" rel="icon" href=".../icons8-internet-16.png">
+    <link type="image" sizes="16x16" rel="icon" href=".../icons8-internet-16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Ultra 2 on Sale for this season ! </title>
   </head>
